force-app/main/default/objects/Contact/fields/Field_Staffer_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Field_Staffer_Facilitator__c</fullName>
    <inlineHelpText>Field Staffer / Facilitator (if &apos;None&apos; selected above)</inlineHelpText>
    <label>Field Staffer / Facilitator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>