force-app/main/default/objects/Contact/fields/Form_Size__c.field-meta.xml
<CustomField>
    <fullName>Form_Size__c</fullName>
    <label>Form Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Long Form</fullName>
            </value>
            <value>
                <fullName>Short Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>