force-app/main/default/objects/Contact/fields/Health_Care_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Health_Care_Coverage__c</fullName>
    <label>Health Care Coverage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Private/Health Insurance/Health Plan</fullName>
            </value>
            <value>
                <fullName>Indian Health Service</fullName>
            </value>
            <value>
                <fullName>VA Health System (Veterans of Armed Forces)</fullName>
            </value>
            <value>
                <fullName>Tricare (Armed Forces)</fullName>
            </value>
            <value>
                <fullName>Care 1st</fullName>
            </value>
            <value>
                <fullName>Care More</fullName>
            </value>
            <value>
                <fullName>Health Net</fullName>
            </value>
            <value>
                <fullName>LA Care</fullName>
            </value>
            <value>
                <fullName>Molina</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Kaiser</fullName>
            </value>
            <value>
                <fullName>Alameda Alliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>