force-app/main/default/objects/Contact/fields/Hours_Paid_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Hours_Paid_Per_Month__c</fullName>
    <label>Hours Paid Per Month</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>