force-app/main/default/objects/Contact/fields/House_Visit_List__c.field-meta.xml
<CustomField>
    <fullName>House_Visit_List__c</fullName>
    <label>House Visit List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call into Health Net 1</fullName>
            </value>
            <value>
                <fullName>Call into Health Net 2</fullName>
            </value>
            <value>
                <fullName>Call into Health Net 3</fullName>
            </value>
            <value>
                <fullName>EOO</fullName>
            </value>
            <value>
                <fullName>Health Net Flyer: Caregiver</fullName>
            </value>
            <value>
                <fullName>Health Net Flyer: Consumer</fullName>
            </value>
            <value>
                <fullName>ID&apos;d Leader (COOL)</fullName>
            </value>
            <value>
                <fullName>Leader (COOL)</fullName>
            </value>
            <value>
                <fullName>Network: Alumni</fullName>
            </value>
            <value>
                <fullName>Other (Use notes area below)</fullName>
            </value>
            <value>
                <fullName>Picture</fullName>
            </value>
            <value>
                <fullName>Picture/Quote</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Referral from AAH</fullName>
            </value>
            <value>
                <fullName>Referral from former student</fullName>
            </value>
            <value>
                <fullName>Referral from Union</fullName>
            </value>
            <value>
                <fullName>Senior Activity Centers</fullName>
            </value>
            <value>
                <fullName>Union list</fullName>
            </value>
            <value>
                <fullName>Union Meeting</fullName>
            </value>
            <value>
                <fullName>Waiting List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>