force-app/main/default/objects/Contact/fields/How_Many_Consumers_Are_You_Caring_For__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Consumers_Are_You_Caring_For__c</fullName>
    <label>How Many Consumers Are You Caring For?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>