force-app/main/default/objects/Contact/fields/How_often__c.field-meta.xml
<CustomField>
    <fullName>How_often__c</fullName>
    <defaultValue>false</defaultValue>
    <label>How often?</label>
    <type>Checkbox</type>
</CustomField>