force-app/main/default/objects/Contact/fields/If_born_outside_United_States__c.field-meta.xml
<CustomField>
    <fullName>If_born_outside_United_States__c</fullName>
    <inlineHelpText>Years lived inside of the United States</inlineHelpText>
    <label>If born outside United States</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>