force-app/main/default/objects/Contact/fields/If_Other_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>If_Other_Ethnicity__c</fullName>
    <inlineHelpText>If &apos;Other Ethnicity&apos;, please indicate your Ethnicity</inlineHelpText>
    <label>If &apos;Other Ethnicity&apos;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>