force-app/main/default/objects/Contact/fields/If_Other_selected_above__c.field-meta.xml
<CustomField>
    <fullName>If_Other_selected_above__c</fullName>
    <label>If &apos;Other&apos; selected above</label>
    <length>255</length>
    <type>Text</type>
</CustomField>