force-app/main/default/objects/Contact/fields/IHSS_Pay_Stub_ID__c.field-meta.xml
<CustomField>
    <fullName>IHSS_Pay_Stub_ID__c</fullName>
    <label>IHSS Pay Stub ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>