force-app/main/default/objects/Contact/fields/In_Union__c.field-meta.xml
<CustomField>
    <fullName>In_Union__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Union</label>
    <type>Checkbox</type>
</CustomField>