force-app/main/default/objects/Contact/fields/Interested_in_availing_services__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_availing_services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in availing services?</label>
    <type>Checkbox</type>
</CustomField>