force-app/main/default/objects/Contact/fields/LACC_ID__c.field-meta.xml
<CustomField>
    <fullName>LACC_ID__c</fullName>
    <label>LACC ID#</label>
    <length>50</length>
    <type>Text</type>
</CustomField>