force-app/main/default/objects/Contact/fields/Need_Provider_for_how_many_days__c.field-meta.xml
<CustomField>
    <fullName>Need_Provider_for_how_many_days__c</fullName>
    <label>Need_Provider_for_how_many_days</label>
    <length>25</length>
    <type>Text</type>
</CustomField>