force-app/main/default/objects/Contact/fields/Not_Qualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Qualified_Reason__c</fullName>
    <inlineHelpText>Please give the reason for setting &apos;Not Qualified&apos; as status value</inlineHelpText>
    <label>Not Qualified Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>