force-app/main/default/objects/Contact/fields/Notes_Auto_01__c.field-meta.xml
<CustomField>
    <fullName>Notes_Auto_01__c</fullName>
    <label>Notes Auto 01</label>
    <type>TextArea</type>
</CustomField>