force-app/main/default/objects/Contact/fields/Notes_Auto_02__c.field-meta.xml
<CustomField>
    <fullName>Notes_Auto_02__c</fullName>
    <label>Notes Auto 02</label>
    <type>TextArea</type>
</CustomField>