force-app/main/default/objects/Contact/fields/Number_of_yes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_yes__c</fullName>
    <label>Number of Yes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>