force-app/main/default/objects/Contact/fields/Other_Rolodex_ID__c.field-meta.xml
<CustomField>
    <fullName>Other_Rolodex_ID__c</fullName>
    <label>Other Rolodex ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>