force-app/main/default/objects/Contact/fields/Participation_form_submitted__c.field-meta.xml
<CustomField>
    <fullName>Participation_form_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provider Participation form submitted?</label>
    <type>Checkbox</type>
</CustomField>