force-app/main/default/objects/Contact/fields/Pled_guilty_no_contest_been_convicted__c.field-meta.xml
<CustomField>
    <fullName>Pled_guilty_no_contest_been_convicted__c</fullName>
    <inlineHelpText>Have you ever pled &quot;guilty&quot; or &quot;no contest&quot; to or been convicted of a crime?</inlineHelpText>
    <label>Pled guilty/no contest/been convicted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>