force-app/main/default/objects/Contact/fields/Post_Training_Survey__c.field-meta.xml
<CustomField>
    <fullName>Post_Training_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Training Survey</label>
    <type>Checkbox</type>
</CustomField>