force-app/main/default/objects/Contact/fields/Potential_Obstacles__c.field-meta.xml
<CustomField>
    <fullName>Potential_Obstacles__c</fullName>
    <label>Potential Obstacles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Childcare</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Not enough money</fullName>
            </value>
            <value>
                <fullName>Personal health Lack of motivation</fullName>
            </value>
            <value>
                <fullName>Lack of study area</fullName>
            </value>
            <value>
                <fullName>School 1st time/or long time</fullName>
            </value>
            <value>
                <fullName>Taking classes in English</fullName>
            </value>
            <value>
                <fullName>Failure to complete</fullName>
            </value>
            <value>
                <fullName>Your employer being upset</fullName>
            </value>
            <value>
                <fullName>Homebound/Cannot Travel</fullName>
            </value>
            <value>
                <fullName>Consumer Care</fullName>
            </value>
            <value>
                <fullName>Too Far</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>