force-app/main/default/objects/Contact/fields/PPF_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>PPF_Submitted_Date__c</fullName>
    <label>PPF Submitted Date</label>
    <type>Date</type>
</CustomField>