force-app/main/default/objects/Contact/fields/Preferred_Class_Locations__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Class_Locations__c</fullName>
    <label>Preferred Class Locations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Legion Post 335 - South Gate</fullName>
            </value>
            <value>
                <fullName>Anoush Banquet Hall - Glendale</fullName>
            </value>
            <value>
                <fullName>Beverly Tower - Montebello</fullName>
            </value>
            <value>
                <fullName>Boys and Girls Club of San Fernando Valley</fullName>
            </value>
            <value>
                <fullName>Brotherhood Crusade</fullName>
            </value>
            <value>
                <fullName>Building Skills Partnership</fullName>
            </value>
            <value>
                <fullName>Care First - Monterey Park</fullName>
            </value>
            <value>
                <fullName>Chimbole Cultural Center</fullName>
            </value>
            <value>
                <fullName>Chinatown Service Center</fullName>
            </value>
            <value>
                <fullName>CITY OF Compton Interest List</fullName>
            </value>
            <value>
                <fullName>CITY OF Downey Interest List</fullName>
            </value>
            <value>
                <fullName>CITY OF Glendale Interest List</fullName>
            </value>
            <value>
                <fullName>CITY OF Inglewood Interest List</fullName>
            </value>
            <value>
                <fullName>CITY OF Los Angeles Interest List</fullName>
            </value>
            <value>
                <fullName>CITY OF Santa Clara Interest List</fullName>
            </value>
            <value>
                <fullName>Colonia Corona Apartment Building</fullName>
            </value>
            <value>
                <fullName>Compton Library</fullName>
            </value>
            <value>
                <fullName>Contra Costa County Adult and Aging Services</fullName>
            </value>
            <value>
                <fullName>De Anza Community &amp; Teen Center</fullName>
            </value>
            <value>
                <fullName>Diamond Bar - Diamond Bar Center</fullName>
            </value>
            <value>
                <fullName>Dibble Campus - Hacienda La Puente Adult Education</fullName>
            </value>
            <value>
                <fullName>Eastmont Community Center</fullName>
            </value>
            <value>
                <fullName>El Monte - Longo Toyota-Scion-Lexus</fullName>
            </value>
            <value>
                <fullName>El Nido Family Center</fullName>
            </value>
            <value>
                <fullName>Fontana - Don Day Neighborhood Center</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Happy ADHC - Brea</fullName>
            </value>
            <value>
                <fullName>Highland Park Skilled Nursing and Wellness</fullName>
            </value>
            <value>
                <fullName>Hollywood Worksource Center</fullName>
            </value>
            <value>
                <fullName>Inglewood - Rogers Park</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>