force-app/main/default/objects/Contact/fields/Preferred_Class_Schedule_Day__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Class_Schedule_Day__c</fullName>
    <label>Preferred Class Schedule Day</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekday</fullName>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>