force-app/main/default/objects/Contact/fields/Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Qualifications__c</fullName>
    <label>Qualification</label>
    <type>TextArea</type>
</CustomField>