force-app/main/default/objects/Contact/fields/Question1__c.field-meta.xml
<CustomField>
    <fullName>Question1__c</fullName>
    <label>Question1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>