force-app/main/default/objects/Contact/fields/Question2__c.field-meta.xml
<CustomField>
    <fullName>Question2__c</fullName>
    <label>Question2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>