force-app/main/default/objects/Contact/fields/Question3__c.field-meta.xml
<CustomField>
    <fullName>Question3__c</fullName>
    <label>Question3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>