force-app/main/default/objects/Contact/fields/QuestionAD1__c.field-meta.xml
<CustomField>
    <fullName>QuestionAD1__c</fullName>
    <label>QuestionAD1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>