force-app/main/default/objects/Contact/fields/QuestionAD2__c.field-meta.xml
<CustomField>
    <fullName>QuestionAD2__c</fullName>
    <label>QuestionAD2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>