force-app/main/default/objects/Contact/fields/QuestionAD3__c.field-meta.xml
<CustomField>
    <fullName>QuestionAD3__c</fullName>
    <label>QuestionAD3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>