force-app/main/default/objects/Contact/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person from CCA recruitment team who has recruited this student</description>
    <label>Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Provider</relationshipName>
    <type>Lookup</type>
</CustomField>