force-app/main/default/objects/Contact/fields/Recruiter_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Assigned_Date__c</fullName>
    <label>Recruiter Assigned Date</label>
    <type>Date</type>
</CustomField>